--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
     "pm2": "^5.3.0"
   }
 }
